# KORE

./: .gitignore  .gitleaks.toml  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements-conductor.txt
.github/: constraints-ci.txt
configs/: README.md  accelerate_fsdp.yaml  accelerate_fsdp_grpo.yaml  dpo_14b_full.json  grpo_14b_full.json  grpo_32b_min_trustworthy.json  midtrain_14b_full.json  sft_14b_full.json
data/: calibration.json  campaign_events.jsonl  campaign_manifest.json  events.jsonl  p0_study_aiter.json  p0_study_final.json  residual_transfer.json
data_smoke/: campaign_events.jsonl  campaign_manifest.json  events.jsonl
docs/: DATASET_SPEC.md  DISTRIBUTED.md  FRONTIER_CLAIM_PROTOCOL.md  GRPO_MIN_TRUSTWORTHY.md  KORE_BENCH_BLUEPRINT.md  P0_RESULTS.md  README.md  SOURCE_PROVENANCE.md  rl_server.md  source_metadata.schema.json
kore/: README.md  campaign_lineage.py  cli.py  config.py  obs.py
logs/: reli.sh  reli_summary.txt
runs/: replay_flash_attn_decode_bf16.jsonl  replay_flash_attn_prefill_bf16.jsonl  replay_fused_add_rmsnorm_bf16.jsonl  replay_fused_moe_silu_bf16.jsonl  replay_gelu_tanh_bf16.jsonl  replay_gemm_bf16.jsonl  replay_gemm_fp8_a8w8.jsonl  replay_gen_abs_bf16.jsonl  replay_gen_abs_fp16.jsonl  replay_gen_abs_fp32.jsonl  replay_gen_add_add_relu_bf16.jsonl  replay_gen_add_add_relu_fp16.jsonl  replay_gen_add_add_relu_fp32.jsonl  replay_gen_add_bf16.jsonl  replay_gen_add_fp16.jsonl  replay_gen_add_gelu_bf16.jsonl  replay_gen_add_gelu_fp16.jsonl  replay_gen_add_gelu_fp32.jsonl  replay_gen_add_mul_bf16.jsonl  replay_gen_add_mul_fp16.jsonl  replay_gen_add_mul_fp32.jsonl  replay_gen_add_relu_bf16.jsonl  replay_gen_add_relu_fp16.jsonl  replay_gen_add_silu_bf16.jsonl  replay_gen_add_silu_fp16.jsonl  replay_gen_add_silu_fp32.jsonl  replay_gen_div_bf16.jsonl  replay_gen_div_fp16.jsonl  replay_gen_elu_bf16.jsonl  replay_gen_elu_fp16.jsonl  replay_gen_elu_fp32.jsonl  replay_gen_exp_bf16.jsonl  replay_gen_exp_fp16.jsonl  replay_gen_exp_fp32.jsonl  replay_gen_fma_bf16.jsonl  replay_gen_fma_fp16.jsonl  replay_gen_fma_fp32.jsonl  replay_gen_fma_gelu_bf16.jsonl  replay_gen_fma_gelu_fp16.jsonl  replay_gen_fma_gelu_fp32.jsonl  (+106 more)
scripts/: README.md  _factory_smoke.py  _kf_split.py  _kf_verify.py  _kf_worker.sh  _maxed_smoke.py  _repro_grpo_step.py  _validate_benchboth.py  complete_base.py  datagen_half.sh  deepen_wins.py  eval_bakeoff_multi.py  factory_supervise.sh  gpu_pick_hip.py  grpo_smoke.py  kore_monitor.py  kore_pause_after_datagen.py  kore_resume_supervise.py  kore_supervise.py  launch_distributed.sh  launch_verl.sh  merge_datagen_roots.py  migrate_jsonl_shards.py  operations_registry.json  preflight_qwen3_32b.py  prove_dense_reward.py  prove_new_ops.py  run_campaign.py  run_conductor_14b.sh  run_e2e_14b.sh  run_full_14b.sh  run_grpo_resilient.sh  run_sft_gate.py  run_sft_gate_dynamic.sh  run_v2_reuse_14b.sh  sft_finish_dynamic.sh  sft_smoke.py  smoke_env.py  spur_datagen_array.sbatch  spur_partition.py  (+7 more)
tests/: README.md  test_agent.py  test_agent_transform_discover.py  test_amd_knowledge.py  test_assemble.py  (+97 more)
(+5973 files in other folders)
