[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kore"
version = "0.1.0"
description = "KORE: multi-turn verifiable-reward RL for AMD ROCm kernel generation"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "torch",
    "transformers>=4.44",
    "trl>=0.12",
    "peft>=0.13",
    "datasets>=2.20",
    "accelerate>=0.34",
]
value = ["xgboost>=2.0", "scikit-learn>=1.3", "numpy>=1.26"]
teacher = ["anthropic>=0.39", "openai>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
kore = "kore.cli:main"

[tool.setuptools.packages.find]
include = ["kore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
